# truenas_nss_rs

./: Cargo.toml  README.md  build.rs  pyproject.toml
benches/: performance.rs
debian/: changelog  control  copyright  rules
examples/: basic_usage.rs
src/: error.rs  group.rs  lib.rs  nss_common.rs  passwd.rs
src/python_bindings/: grp.rs  mod.rs  nss_common.rs  pwd.rs
tests/: integration_tests.rs  test_nss_cpython_compatibility.py  test_python_bindings.py
