[package]
name = "truenas_rust_nss"
version = "0.1.0"
edition = "2021"
description = "Rust NSS (Name Service Switch) library for user and group lookups"
license = "GPL-3.0"
repository = "https://github.com/truenas/truenas_rust_nss"

[dependencies]
libc = "0.2"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
users = "0.11"

[lib]
name = "truenas_rust_nss"
crate-type = ["cdylib", "rlib"]

[[bench]]
name = "performance"
harness = false