[package]
name = "truenas_rust_nss"
version = "0.1.0"
edition = "2021"
description = "Rust NSS (Name Service Switch) library for user and group lookups"
license = "GPL-3.0"
repository = "https://github.com/truenas/truenas_nss_rs"

[dependencies]
libc = "0.2"
thiserror = "1.0"
pyo3 = { version = "0.25", features = ["extension-module"], optional = true }

[dev-dependencies]

[features]
default = []
python = ["pyo3"]

[lib]
name = "truenas_rust_nss"
crate-type = ["cdylib", "rlib"]


[profile.release]
debug = true
strip = false

[profile.dev]
debug = true
strip = false